# fixed-wing-vtol-simulation

./: .gitattributes  .gitignore  LICENSE  README.md
src/fixar_007_description/: CMakeLists.txt  package.xml
src/fixar_007_description/config/: controller.yaml
src/fixar_007_description/include/fixar_007_description/: fixar_windows_bridge.hpp  windows_flight_controller.hpp
src/fixar_007_description/launch/: display.launch.py  gazebo.launch.py  gazebo_sdf.launch.py
src/fixar_007_description/meshes/: README.md
src/fixar_007_description/models/fixar_007/: model.config  model.sdf
src/fixar_007_description/scripts/: test_windows_client.py  windows_bridge.py
src/fixar_007_description/src/: fixar_windows_bridge.cpp  windows_flight_controller.cpp
src/fixar_007_description/worlds/: empty_with_sensors.sdf
